@startuml
skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam dpi 150
skinparam nodesep 70
skinparam ranksep 90
hide circle
top to bottom direction

skinparam class {
  BackgroundColor white
  BorderColor black
  ArrowColor black
  FontColor black
  FontStyle plain
  AttributeFontColor black
}

class Zgrada {
  id: Long
  name: String
  address: String
  --
}

class Stan {
  id: Long
  number: String
  floor: int
  --
}

class Korisnik {
  id: Long
  firstName: String
  lastName: String
  email: String
  password: String
  role: Uloga
  --
}

class Tiket {
  id: Long
  title: String
  description: String
  status: StatusTiketa
  priority: Prioritet
  createdAt: LocalDateTime
  updatedAt: LocalDateTime
  --
}

class Komentar {
  id: Long
  message: String
  createdAt: LocalDateTime
  --
}

class IstorijaTiketa {
  id: Long
  oldStatus: StatusTiketa
  newStatus: StatusTiketa
  changedAt: LocalDateTime
  --
}

' ---- Kompozicije: pun romb na strani celine (kompozita) ----
Zgrada "1" *-- "0..*" Stan
Tiket "1" *-- "0..*" Komentar
Tiket "1" *-- "1..*" IstorijaTiketa

' ---- Asocijacije: obicna linija, bez romba ----
Stan "1" -- "0..*" Tiket
Korisnik "1" -- "0..*" Tiket : prijavljuje >
Korisnik "0..1" -- "0..*" Tiket : zaduzen >
Korisnik "0..1" -- "0..*" Tiket : resava >
Korisnik "1" -- "0..*" Komentar
Korisnik "1" -- "0..*" IstorijaTiketa

@enduml
